--- a/Thesis_final.tex
+++ b/Thesis_final.tex
@@ -146,7 +146,7 @@
 \newcommand{\elandscape}{\end{landscape}}
 \newcommand{\tex}[1]{#1}
 \usepackage{pdfpages}
-\usepackage[acronym,style=super,nogroupskip,nonumberlist]{glossaries}
+\usepackage[acronym,style=super,nogroupskip,nonumberlist,nopostdot]{glossaries}
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage{tabu}
@@ -239,8 +239,7 @@ southeast of the Solomon Island being Remote Oceania
 \citep{Matisoo-Smith2018}. The settlement of Near Oceania occurred first
 (40 k\gls{ya}), and was followed by the settlement of Remote Oceania,
 which reached as far as Samoan and Tonga (Western Polynesia) as part of
-the Lapita expansion (3 k\gls{ya}, \citet{Matisoo-Smith2015};
-\citet{Skoglund2016}). After this settlement, came the peopling of the
+the Lapita expansion (3 k\gls{ya}, \citep{Matisoo-Smith2015, Skoglund2016}). After this settlement, came the peopling of the
 Eastern Polynesia (including the Cook Islands) (1-1.2 k\gls{ya};
 \citet{Wilmshurst2011}) and then finally, the settlement of \glsdesc{nz}
 by \gls{nz} M\tex{\={a}}ori 800 \gls{ya}
@@ -5179,8 +5178,7 @@ Asia the migration continued with the peopling of East Asia (20kya,
 \citet{Groucutt2015}). The Pacific was settled in two events, the first
 was the settlement of Near Oceania (40 kya), followed by the settlement
 of Remote Oceania, reaching Western Polynesia (Samoa and Tonga) during
-the Lapita expansion (3 kya, \citet{Matisoo-Smith2015};
-\citet{Skoglund2016}). Eastern Polynesia (including the Cook Islands)
+the Lapita expansion (3 kya, \citep{Matisoo-Smith2015,Skoglund2016}). Eastern Polynesia (including the Cook Islands)
 was then settled (1--1.2 kya, \citet{Wilmshurst2011}). The final region
 of the Polynesian triangle to be settled was that of \gls{nz} by
 \gls{nz} M\tex{\={a}}ori, occurring 800 ya
